# chinese-semantic-relations

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chinese_semantic_relations/: __init__.py  analyzer.py  evaluator.py  ontology.py  strategies.py
tests/: test_semantic_relations.py
